--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,10 @@ script:
     - |
         if [[ "$TRAVIS_PYTHON_VERSION" = '3.4' ]]; then 
             nose_args="--with-doctest --doctest-extension=.rst --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_UDIFF";
+            nose_args="$nose_args --with-coverage --cover-package=pandalone.components,pandalone.mappings,pandalone.pndlcmd,pandalone.utils  --cover-min-percentage=80";
             echo "RUNNING: nosetests $nose_args"
         fi
+    - echo "nosetests $nose_args"
     - nosetests $nose_args
 
     - python setup.py sdist bdist_wheel             ## Create archives for PyPI repo.
