--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,6 @@ script:
     ##  In case it fails, improve the filtering-code in ``setup.py``.
     - python setup.py --long-description | rst2html.py  --halt=warning > /dev/null
 
-#after_success:
-#    coveralls
+after_success:
+    coveralls
 
