--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
 
 install:
   - pip install -r requirements/execution.txt
+  - pip install coveralls
 
 # command to run tests
 script:
