Add proper /doc folder.
+ Rough index with sub-pages included.
+ Update logo with golden-line.
+ build: Add 'sphinx_rtd_theme' dep.
+ MANIFEST.in to exclude doc/doc recusrive symlink.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 script:
     - |
         if [[ $TRAVIS_PYTHON_VERSION = '2.7' ]]; then 
-            echo #python setup.py build_sphinx ## TODO: Imitate readthedocs env.
+            python setup.py build_sphinx ## Imitate readthedocs env.
         fi
 
     - |
