test: Increase utils coverage (90%).
+ Add .coveragerc.
+ Fix setup.cfg coverage targets.
+ utils: split utils into winutils (UNTESTED!).
  + Add more utils TCs.
  + Drop pairwise() & memoize (to be found in `toolz`).
+ docs: Fix duplicate replacements.
+ build: Fix MANIFEST warn.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ test_code       = my_nosetests
 
 test_code_cover = my_nosetests
                     --with-coverage
-                        --cover-package=pandalone.experiment,pandalone.model,pandalone.idgears,pandalone.pandel,pandalone.utils
+                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.pndlcmd,pandalone.utils
                         --cover-html
                         --cover-xml
                         --cover-min-percentage=75
@@ -52,9 +52,10 @@ test_code_cover = my_nosetests
 test_all        = my_nosetests
                     --with-doctest
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_UDIFF
+                        --tests=pandalone,README.rst
                         --doctest-extension=rst
                     --with-coverage
-                        --cover-package=pandalone.experiment,pandalone.model,pandalone.idgears,pandalone.pandel,pandalone.utils
+                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.pndlcmd,pandalone.utils
                         --cover-html
                         --cover-xml
                         --cover-min-percentage=80
