--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     ## From: http://conda.pydata.org/docs/travis.htm
     ## Another one: https://gist.github.com/dan-blanchard/7045057
     #- sudo apt-get update
-    - wget http://repo.continuum.io/miniconda/Miniconda3-3.7.0-Linux-x86_64.sh -O miniconda.sh
+    - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - hash -r
@@ -20,8 +20,6 @@ before_install:
     - deps="`grep -v \# requirements/miniconda.txt`"
     - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION $deps
     - source activate test-environment
-
-    - pip install nose -IU   ## Conda's nose is rotten, and `python setup.py nosetests` fails!
 
 install:
   - pip install -r requirements/execution.txt
