--- a/setup.cfg
+++ b/setup.cfg
@@ -34,13 +34,14 @@ doctest_docs    = my_nosetests
 doctest_all    = my_nosetests
                     --with-doctest
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_NDIFF
-                        --tests=pandalone,README.rst
+                        --tests=tests,README.rst
                         --doctest-extension=.rst
 
 
 test_code       = my_nosetests
 
 test_code_cover = my_nosetests
+                    --tests=tests,README.rst
                     --with-coverage
                         --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.pndlcmd,pandalone.utils
                         --cover-html
@@ -50,9 +51,9 @@ test_code_cover = my_nosetests
 ## Run tests, doctests in *.rst and code-modules, and report coverage.
 #
 test_all        = my_nosetests
+                    --tests=tests,README.rst
                     --with-doctest
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_UDIFF
-                        --tests=pandalone,README.rst
                         --doctest-extension=rst
                     --with-coverage
                         --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.pndlcmd,pandalone.utils
