--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ build-dir = doc/_build
 
 
 [aliases]
-my_nosetests    = nosetests -v --exclude '~scratch.*'
+my_nosetests    = nosetests --verbose --exclude '~scratch.*'
 
 test_failed     = my_nosetests
                      --failed
@@ -18,7 +18,6 @@ test_failed     = my_nosetests
 doctest_code    = my_nosetests
                     --with-doctest
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_NDIFF
-                        --tests=tests
 
 ## Run doctests in README only.
 #
@@ -34,14 +33,12 @@ doctest_docs    = my_nosetests
 doctest_all    = my_nosetests
                     --with-doctest
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_NDIFF
-                        --tests=tests,README.rst
                         --doctest-extension=.rst
 
 
 test_code       = my_nosetests
 
 test_code_cover = my_nosetests
-                    --tests=tests,README.rst
                     --with-coverage
                         --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.pndlcmd,pandalone.utils
                         --cover-html
@@ -51,7 +48,6 @@ test_code_cover = my_nosetests
 ## Run tests, doctests in *.rst and code-modules, and report coverage.
 #
 test_all        = my_nosetests
-                    --tests=tests,README.rst
                     --with-doctest
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_UDIFF
                         --doctest-extension=rst
