--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,30 +27,14 @@ install:
     - ps: $condadeps = get-content requirements/miniconda.txt | select-string -NotMatch -Pattern '#'
     - ps: conda install --yes --quiet $condadeps
     - "conda install --yes --quiet pywin32"
-    - "pip install -r requirements\\execution.txt"
-    ## To install setup-dependencies.
-    - "pip install pip coverage coveralls"
-    - "python setup.py install"
+    - "pip install -r requirements\\development.txt -r requirements\\execution.txt"
+    - "python setup.py develop"
     - "python setup.py build"
+    # - "python setup.py install" ## NO, requirements installed in "develop' mode.
 
 build: false
 
 test_script:
-    ## Run tests- 1st to install test-dependencies
-    #
-    - ps: |
-        if ($env:PYTHON_VERSION -eq "3.4") {
-            echo "+++ Checking all TCs, DTs & Coverage...."
-            &python setup.py test_all
-        } else {
-            echo "+++ Checking only TCs....";
-            &python setup.py test_code
-        }
-
-    - |
-        echo "+++ Checking README for PyPy....";
-        &python setup.py test
-    
     - ps: |
         echo "+++ Checking README for PyPy...."
         ./bin/check_readme.ps1
@@ -62,3 +46,13 @@ test_script:
     - ps: |
         echo "+++  Checking archives for PyPI repo..."
         &python setup.py sdist bdist_wheel
+
+    - ps: |
+        if ($env:PYTHON_VERSION -eq "3.4") {
+            echo "+++ Checking all TCs, DTs & Coverage...."
+            &python setup.py test_all
+        } else {
+            echo "+++ Checking only TCs....";
+            &python setup.py test_code
+        }
+
