FIX Apveyor by switching to cmd.exe.
* Simplify bin/run_tests.sh helper script.
+ pip-install nose over conda-ed.
+ Del dodo.py symlink (useless, and broke appveyor).

[ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
 
     - |
         echo "+++ Checking site...."
-        python setup.py build_sphinx ## Imitate readthedocs env.
+        python setup.py build_sphinx
 
     - |
         echo "+++  Checking archives for PyPI repo..."
