--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,6 +28,7 @@ install:
     - ps: conda install --yes --quiet $condadeps
     - "conda install --yes --quiet pywin32"
     - "pip install -r requirements\\development.txt -r requirements\\execution.txt"
+    - "pip install nose -UI"
     - "python setup.py develop"
     - "python setup.py build"
     # - "python setup.py install" ## NO, requirements installed in "develop' mode.
@@ -39,20 +40,12 @@ test_script:
         echo "+++ Checking README for PyPy...."
         ./bin/check_readme.ps1
 
-    - ps: |
+    - |
         echo "+++ Checking site...."
-        &python setup.py build_sphinx
+        python setup.py build_sphinx
 
-    - ps: |
+    - |
         echo "+++  Checking archives for PyPI repo..."
-        &python setup.py sdist bdist_wheel
+        python setup.py sdist bdist_wheel
 
-    - ps: |
-        if ($env:PYTHON_VERSION -eq "3.4") {
-            echo "+++ Checking all TCs, DTs & Coverage...."
-            &python setup.py test_all
-        } else {
-            echo "+++ Checking only TCs....";
-            &python setup.py test_code
-        }
-
+    - ".\\bin\\run_code_tests.bat"
