+ Mark as TODO nosetest miniconda hack.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,7 +36,7 @@ install:
 
     - pip install -r requirements\\development.txt
 
-    ## Fix ``python setup.py nosetests`` failing with conda:
+    ## TODO: Check if FIXED ``python setup.py nosetests`` failing with conda:
     #   https://github.com/ContinuumIO/anaconda-issues/issues/280
     - pip uninstall -y nose & pip uninstall -y nose & pip install -UI nose
 
