--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -70,3 +70,6 @@ test_script:
     - |
         echo "+++ Checking install...."
         python setup.py install
+
+on_success:
+    - IF "%PYTHON_VERSION%"=="3.4" (coveralls)
