ci: Restored Coveralls from Travis
- REMOVE COVERAGE % LIMIT.
+ xlref: Rename TargetRef --> Edge

+ ALL Tests OK

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -71,5 +71,6 @@ test_script:
         echo "+++ Checking install...."
         python setup.py install
 
-on_success:
-    - IF "%PYTHON_VERSION%"=="3.4" (coveralls)
+## Needs repo-token and this would be different per user.
+#on_success:
+#    - IF "%PYTHON_VERSION%"=="3.4" (coveralls)
