--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,9 @@ test_all        = my_nosetests
                         --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xlref,pandalone.pndlcmd,pandalone.utils
                         --cover-html
                         --cover-xml
-                        --cover-min-percentage=70
+
+test_all_strict        = test_all
+                        --cover-min-percentage=80
 
 bdist_win32     =  bdist_wininst --plat-name=win32
 bdist_win64     =  bdist_wininst --plat-name=win-amd64
