xleash: Rename from xlasso.

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ test_code       = my_nosetests
 
 test_code_cover = my_nosetests
                     --with-coverage
-                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xlasso,pandalone.pndlcmd,pandalone.utils
+                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.pndlcmd,pandalone.utils
                         --cover-html
                         --cover-xml
                         --cover-min-percentage=75
@@ -52,7 +52,7 @@ test_all        = my_nosetests
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_UDIFF
                         --doctest-extension=rst
                     --with-coverage
-                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xlasso,pandalone.pndlcmd,pandalone.utils
+                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.pndlcmd,pandalone.utils
                         --cover-html
                         --cover-xml
 
