--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,8 @@ build-dir = doc/_build
 
 [aliases]
 my_nosetests    = nosetests --verbose --exclude '~scratch.*'
+cover_files 	= pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.xleash.io
+
 
 test_failed     = my_nosetests
                      --failed
@@ -40,7 +42,7 @@ test_code       = my_nosetests
 
 test_code_cover = my_nosetests
                     --with-coverage
-                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.pndlcmd,pandalone.utils
+                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.xleash.io
                         --cover-html
                         --cover-xml
                         --cover-min-percentage=75
@@ -52,7 +54,7 @@ test_all        = my_nosetests
                         --doctest-options=+NORMALIZE_WHITESPACE,+ELLIPSIS,+REPORT_UDIFF
                         --doctest-extension=rst
                     --with-coverage
-                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.pndlcmd,pandalone.utils
+                        --cover-package=pandalone.components,pandalone.mappings,pandalone.pandata,pandalone.xleash,pandalone.xleash.io
                         --cover-html
                         --cover-xml
 
