build: flake8 code-metrics.
+ Fix xleash's ALL.

+ Readme: Link to main modules.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,13 @@
 ## Python's setup.cfg:
 #   Created on 5 Aug 2014
 #
+
+[flake8]
+ignore = E501,E241
+max-line-length = 80
+max-complexity = 20
+
+
 [build_sphinx]
 all_files = 1
 build-dir = doc/_build
