--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 install:
     - python --version
     - pip install -r requirements/development.pip
+    - pip list
 
 script:
     - |
@@ -25,7 +26,6 @@ script:
         python setup.py build_sphinx
 
     - |
-
         echo "+++  Checking archives for PyPI repo..."
         python setup.py sdist bdist_wheel
 
