--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 install:
     - python --version
     - pip install -r requirements/development.pip
+    - pip install xlrd pandas
     - pip list
 
 script:
@@ -30,7 +31,7 @@ script:
         python setup.py sdist bdist_wheel
 
     - |
-        if [[ "$TRAVIS_PYTHON_VERSION" = '3.4' ]]; then
+        if [[ "$TRAVIS_PYTHON_VERSION" = '3.5' ]]; then
             echo "+++ Checking all TCs, DTs & Coverage....";
             python setup.py test_all
         else
