--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,10 +4,10 @@
 environment:
 
     matrix:
-      - PYTHON: "C:\\Python27-conda32"
-        PYTHON_VERSION: "2.7"
-        PYTHON_ARCH: "32"
-        IS_CONDA: "true"
+#       - PYTHON: "C:\\Python27-conda32"
+#         PYTHON_VERSION: "2.7"
+#         PYTHON_ARCH: "32"
+#         IS_CONDA: "true"
 
       - PYTHON: "C:\\Python34-conda64"
         PYTHON_VERSION: "3.4"
