build: fix forgotten pndl cmd entry-point; add VSCode gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,11 @@ target/
 # Temporary-files
 ~*
 *scratch*
+
+### VisualStudioCode ###
+# See https://stackoverflow.com/questions/51876769/should-you-commit-vscode-symbols-file-to-source-control
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
