--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -49,7 +49,7 @@ install:
             pip install pywin32
         }
 
-    - pip install -r requirements\\development.pip
+    - pip install -e .[dev]
 
 
     # - "python setup.py develop" ## NO, pip installed in "develop' mode, above.
